# advent-of-code-2022

./: Cargo.toml
src/day-1a/: main.rs
src/day-1b/: main.rs
src/day-2a/: main.rs
src/day-2b/: main.rs
src/day-3a/: main.rs
src/day-3b/: main.rs
src/day-4a/: main.rs
src/day-4b/: main.rs
src/day-5a/: main.rs
src/day-5b/: main.rs
src/day-6a/: main.rs
src/day-6b/: main.rs
