[package]
name = "advent-of-code-2022"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.66"

[[bin]]
name = "day-1a"
path = "src/day-1a/main.rs"
[[bin]]
name = "day-1b"
path = "src/day-1b/main.rs"
[[bin]]
name = "day-2a"
path = "src/day-2a/main.rs"
[[bin]]
name = "day-2b"
path = "src/day-2b/main.rs"
[[bin]]
name = "day-3a"
path = "src/day-3a/main.rs"
[[bin]]
name = "day-3b"
path = "src/day-3b/main.rs"
[[bin]]
name = "day-4a"
path = "src/day-4a/main.rs"
[[bin]]
name = "day-4b"
path = "src/day-4b/main.rs"
